--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-project",
-  "author":"AlexTrava ",
+  "author": "AlexTrava ",
   "version": "1.0.0",
   "type": "module",
   "description": "its test project",
@@ -8,5 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
